// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gateway tests > message validation > reject re-approving a message 1`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000070a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae10636f6e74726163742d61646472657373051a7321b74e2b6a7e949e6c4ad313035b16650950170a6d6573736167652d69640d00000001310c7061796c6f61642d686173680200000020373360faa7d5fc254d927e6aafe6127ec920f30efe61612b7ec6db33e72fb9500e736f757263652d616464726573730d0000000c6164647265737330783132330c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d617070726f766564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "contract-address": {
            "address": {
              "hash160": "7321b74e2b6a7e949e6c4ad313035b1665095017",
              "type": 0,
              "version": 26,
            },
            "type": 5,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "payload-hash": {
            "buffer": Uint8Array [
              55,
              51,
              96,
              250,
              167,
              213,
              252,
              37,
              77,
              146,
              126,
              106,
              175,
              230,
              18,
              126,
              201,
              32,
              243,
              14,
              254,
              97,
              97,
              43,
              126,
              198,
              219,
              51,
              231,
              47,
              185,
              80,
            ],
            "type": 2,
          },
          "source-address": {
            "data": "address0x123",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-approved",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > message validation > reject re-approving a message 2`] = `[]`;

exports[`Gateway tests > message validation > reject re-approving a message 3`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000040a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae0a6d6573736167652d69640d00000001310c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d6578656375746564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-executed",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > message validation > reject re-approving a message 4`] = `[]`;

exports[`Gateway tests > message validation > should approve and validate message 1`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000070a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae10636f6e74726163742d61646472657373051a7321b74e2b6a7e949e6c4ad313035b16650950170a6d6573736167652d69640d00000001310c7061796c6f61642d686173680200000020373360faa7d5fc254d927e6aafe6127ec920f30efe61612b7ec6db33e72fb9500e736f757263652d616464726573730d0000000c6164647265737330783132330c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d617070726f766564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "contract-address": {
            "address": {
              "hash160": "7321b74e2b6a7e949e6c4ad313035b1665095017",
              "type": 0,
              "version": 26,
            },
            "type": 5,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "payload-hash": {
            "buffer": Uint8Array [
              55,
              51,
              96,
              250,
              167,
              213,
              252,
              37,
              77,
              146,
              126,
              106,
              175,
              230,
              18,
              126,
              201,
              32,
              243,
              14,
              254,
              97,
              97,
              43,
              126,
              198,
              219,
              51,
              231,
              47,
              185,
              80,
            ],
            "type": 2,
          },
          "source-address": {
            "data": "address0x123",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-approved",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;

exports[`Gateway tests > message validation > should approve and validate message 2`] = `
[
  {
    "data": {
      "contract_identifier": "ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM.gateway",
      "raw_value": "0x0c000000040a636f6d6d616e642d69640200000020908b3539125bd138ed0f374862a28328229fb1079bce40efdab1e52f89168fae0a6d6573736167652d69640d00000001310c736f757263652d636861696e0d00000006536f7572636504747970650d000000106d6573736167652d6578656375746564",
      "topic": "print",
      "value": {
        "data": {
          "command-id": {
            "buffer": Uint8Array [
              144,
              139,
              53,
              57,
              18,
              91,
              209,
              56,
              237,
              15,
              55,
              72,
              98,
              162,
              131,
              40,
              34,
              159,
              177,
              7,
              155,
              206,
              64,
              239,
              218,
              177,
              229,
              47,
              137,
              22,
              143,
              174,
            ],
            "type": 2,
          },
          "message-id": {
            "data": "1",
            "type": 13,
          },
          "source-chain": {
            "data": "Source",
            "type": 13,
          },
          "type": {
            "data": "message-executed",
            "type": 13,
          },
        },
        "type": 12,
      },
    },
    "event": "print_event",
  },
]
`;
